--- a/templates/connexion/index.html.twig
+++ b/templates/connexion/index.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}Accueil{% endblock %}
 
+{% block head %}
+    {% block stylesheets %}
+        <link href="{{ asset('/css/styles.css') }}" rel="stylesheet" />
+    {% endblock %}
+{% endblock %}
+
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
@@ -11,8 +17,6 @@
 <div class="example-wrapper">
 <?php $session = new Session(); ?>
 
-    {% include 'barNavigation.html.twig' %}
-
     <h1>Bonjour {{app.session.get('prenom')}}</h1>
 
     <h3>Votre profil Visiteur est activé</h3>
@@ -21,6 +25,10 @@
         <p>Nom : {{app.session.get('nom')}}</p>
         <p>Prenom : {{app.session.get('prenom')}}</p>
     </ul>
+
+    <a href="/consulter"><button class="blueBG">Consulter frais</button></a>
+    <a href="/fichefrais"><button class="blueBG">Saisir des frais</button></a>
+
 </div>
 
 {% endblock %}
