--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
-p, h1,h2,h3,h4,h5, td, tr, a{
+p, h1,h2,h3,h4,h5, td, tr, a, ul{
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -13,6 +14,7 @@ button{
     font-size: 16px;
     border-radius: 0.3em;
     transition: 0.35s;
+    background-color: grey;
 }
 
 button:hover{
@@ -21,10 +23,23 @@ button:hover{
     color: #fff
 }
 
+.navBar{
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-between; 
+    background-color:#272c33; 
+    padding: 1em 1em 0 1em;
+}
+
+
 .greenBG{
     background-color: #4CAF50;
 }
 
 .blueBG{
     background-color: rgb(58, 120, 255);
+}
+
+.border{
+    border: solid #000 0.1em;
 }
