--- a/templates/barNavigation.html.twig
+++ b/templates/barNavigation.html.twig
@@ -1,8 +1,12 @@
-<div class="example-wrapper" style="display: flex; flex-direction: row; justify-content: space-between; background-color:#eee; 
-        padding: 0.5em; ">
+<div class="navBar">
         <div>
-                <a href={{path('accueilUtilisateur')}}>Accueil</a>
-                <a href={{ path('consulterFicheFrais') }}>Consulter fiches de frais</a>
+                <img rel="icon" src="{{asset('/img/logo.png')}}" style="width: 4em; height: 4em; vertical-align: middle; margin-right: 1em" />
+                <a style="color:#fff; font-weight: bold" href={{path('accueilUtilisateur')}}>Accueil</a>
+                <a style="color:#fff; font-weight: bold" href={{ path('consulterFicheFrais') }}>Consulter fiches de frais</a>
         </div>
-        <a style="color:#c00" href={{ path('seDeconnecter') }}>Se déconnecter</a>
+        <div>
+                <a style="color:#fff; font-weight: bold" href={{ path('seDeconnecter') }}>Se déconnecter</a>
+                <p style="color:#fff">{{app.session.get('nom')}} {{app.session.get('prenom')}}</p>
+        </div>        
 </div>
+
