--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,9 @@
 p, h1,h2,h3,h4,h5, td, tr, a, ul{
-    color: black;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+:not(a){
+    color: black;
 }
 
 
@@ -13,13 +16,13 @@ button{
     display: inline-block;
     font-size: 16px;
     border-radius: 0.3em;
-    transition: 0.35s;
+    transition: 0.25s;
     background-color: grey;
 }
 
 button:hover{
     cursor: pointer;
-    background-color: #212121;
+    background-color: #272c33;
     color: #fff
 }
 
