--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block body %}
+
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -22,41 +23,47 @@
 
 <div class="example-wrapper" style="display:flex; flex-direction: column; align-items:center">
 
-    <img src="{{asset('/img/logo.png')}}" height=150em style="margin-bottom: 2em" />
+    <img src="{{asset('/img/logo.png')}}" height=150em style="margin-bottom: 2em; margin: 0 0 4em 0" />
 
-    <div style="border: 2.5px solid #000b; padding: 0 4em 1em 4em; border-radius: 0.2em; background-color: #eaeaea">
+    <div style="border: 2.5px solid #000b; padding: 0 4em 1em 4em; border-radius: 0.2em; background-color: #eaeaea;">
     
         <form action="/connexion" method="POST" class="form" name="formulaireConnexion">
             <h1 id="textConnexion" style="text-align: center">Connexion</h1>
             <label>Login</label>
-            <input name="login" class="border" id="login" autocomplete="off" style="text-align:center; font-weight: bold" />
+            <input name="login" class="border" id="login" placeholder="login" autocomplete="off" style="text-align:center; font-weight: bold" />
             <label>Mot de passe</label>
-            <input name="mdp" type="password" class="border" id="mdp" style="text-align:center;" />
-            <button class="greenBG border" style="margin-top:0.5em">Se connecter</button>
+            <input name="mdp" type="password" class="border" id="mdp" placeholder="mot de passe" style="text-align:center;" />
+                        {% set lienPage = path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) %}
+
+            {% if lienPage == '/connexion/echec' %}
+                <li class="erreur">Identifiant ou mot de passe incorrect.</li>
+            {% endif %}
+            <button class="greenBG border" style="margin-top:0.5em; background-color: var(--pastelGreen); color: var(--black1)">
+                Se connecter
+            </button>
         </form>
 
         <script>
             let login = document.getElementById("login");
             let mdp = document.getElementById("mdp");
             login.focus();
+            login.style.backgroundColor = "var(--confettiYellow)";
             login.style.transition = "0.35s"
             mdp.style.transition = "0.35s"
-            login.style.border = "solid #44f 2px";
-            mdp.style.border = "solid black 2px";
             login.style.padding = "0.5em 0 0.3em 0";
             mdp.style.padding = "0.2em 0 .2em 0";
 
             login.addEventListener("focus", () => {
-                login.style.border = "solid #44f 2px";
+                login.style.backgroundColor = "var(--confettiYellow)";
                 login.style.padding = "0.5em 0 0.3em 0";
-                mdp.style.border = "solid black 2px";
+                mdp.style.backgroundColor = null;
                 mdp.style.padding = "0.2em 0 0.2em 0";
             });
 
             mdp.addEventListener("focus", () => {
-                login.style.border = "solid black 2px";
+                login.style.backgroundColor = null;
                 login.style.padding = "0.2em 0 0.2em 0";
-                mdp.style.border = "solid #44f 2px";
+                mdp.style.backgroundColor = "var(--confettiYellow)";
                 mdp.style.padding = "0.5em 0 0.3em 0";
             });
 
@@ -66,30 +73,24 @@
             let index = 0;
             textConnexion.style = "height: 0.3em; transition: 0.6s";
             textConnexion.innerHTML = "";
+            let executed = false;
 
             const interval = setInterval(function() {
+                if( !executed){
                     if(listeConnexion[index] == undefined){
-                        index = 0;
-                        textConnexion.innerHTML = "";
+                        executed = true;
                     }
                     else{
                         index++;
                         textConnexion.style = "height: 1em; transition: 0.6s";
                         textConnexion.innerHTML = textConnexion.innerHTML + listeConnexion[index-1];
                     }
+                }
             }, 300);
 
         </script>
 
     </div>
-
-
-    {% set lienPage = path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) %}
-
-    {% if lienPage == '/connexion/echec' %}
-        {%set styleErreur = 'color:red; border-radius:5%; text-align:center'%}
-        <p style={{styleErreur}}>L'indentifiant ou le mot de passe est incorrect.</p>
-    {% endif %}
 
 
 </div>
