--- a/templates/fichefrais/new.html.twig
+++ b/templates/fichefrais/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Fichefrais{% endblock %}
 
 {% block body %}
-    <h1>Create new Fichefrais</h1>
+    <h1>Créer une nouvelle fiche de frais</h1>
 
     {{ include('fichefrais/_form.html.twig') }}
 
-    <a href="{{ path('fichefrais_index') }}">back to list</a>
+    <a href="{{ path('fichefrais_index') }}">Retour vers la liste</a>
 {% endblock %}
