--- a/templates/fichefrais/edit.html.twig
+++ b/templates/fichefrais/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Fichefrais{% endblock %}
+{% block title %}Modifier Fichefrais{% endblock %}
 
 {% block body %}
-    <h1>Edit Fichefrais</h1>
+    <h1>Modifier Fichefrais</h1>
 
-    {{ include('fichefrais/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('fichefrais/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('fichefrais_index') }}">back to list</a>
+    <a href="{{ path('fichefrais_index') }}">Retour vers la liste</a>
 
     {{ include('fichefrais/_delete_form.html.twig') }}
 {% endblock %}
