--- a/templates/fichefrais/index.html.twig
+++ b/templates/fichefrais/index.html.twig
@@ -41,5 +41,8 @@
         </tbody>
     </table>
 
-    <a href="{{ path('fichefrais_new') }}">Créer une nouvelle fiche</a>
+    <br><br>
+    <button style="background-color: var(--shark)">
+        <a href="{{ path('fichefrais_new') }}">Créer une nouvelle fiche</a>
+    </button>
 {% endblock %}
