--- a/templates/lignefraishorsforfait/new.html.twig
+++ b/templates/lignefraishorsforfait/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('lignefraishorsforfait/_form.html.twig') }}
 
-    <a href="{{ path('lignefraishorsforfait_index') }}">back to list</a>
+    <a href="{{ path('lignefraishorsforfait_index') }}">Retour vers la liste</a>
 {% endblock %}
