--- a/templates/barNavigation.html.twig
+++ b/templates/barNavigation.html.twig
@@ -5,7 +5,7 @@
                 <a style="color:#fff; font-weight: bold" href={{ path('consulterFicheFrais') }}>Consulter fiches de frais</a>
         </div>
         <div>
-                <a style="color:#fff; font-weight: bold" href={{ path('seDeconnecter') }}>Se déconnecter</a>
+                <button style="background-color: var(--shark); border: white dashed 0.1em"><a style="color: white; font-weight: bold" href={{ path('seDeconnecter') }}>Se déconnecter</a></button>
                 <p style="color:#fff">{{app.session.get('nom')}} {{app.session.get('prenom')}}</p>
         </div>        
 </div>
