--- a/templates/visiteur/new.html.twig
+++ b/templates/visiteur/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Visiteur{% endblock %}
+{% block title %}Créer Visiteur{% endblock %}
 
 {% block body %}
-    <h1>Create new Visiteur</h1>
+    <h1>Créer un nouveau Visiteur</h1>
 
     {{ include('visiteur/_form.html.twig') }}
 
-    <a href="{{ path('visiteur_index') }}">back to list</a>
+    <a href="{{ path('visiteur_index') }}">Retour vers la liste</a>
 {% endblock %}
