--- a/templates/visiteur/show.html.twig
+++ b/templates/visiteur/show.html.twig
@@ -46,9 +46,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('visiteur_index') }}">back to list</a>
+    <a href="{{ path('visiteur_index') }}">Retour vers la liste</a>
 
-    <a href="{{ path('visiteur_edit', {'id': visiteur.id}) }}">edit</a>
+    <a href="{{ path('visiteur_edit', {'id': visiteur.id}) }}">Modifier</a>
 
     {{ include('visiteur/_delete_form.html.twig') }}
 {% endblock %}
