--- a/templates/fichefrais/show.html.twig
+++ b/templates/fichefrais/show.html.twig
@@ -8,6 +8,10 @@
     <table class="table">
         <tbody style="text-align:left">
             <tr>
+                <th>Identifiant visiteur : </th>
+                <td>{{ fichefrai.idvisiteur.id }}</td>
+            </tr>
+            <tr>
                 <th>Mois : </th>
                 <td>{{ fichefrai.mois }}</td>
             </tr>
